# crag-python

./: CMakeLists.txt  Dockerfile  README.md  fast_braids-1.0.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  setup.py  test_crag.py
BraidGroup/: CMakeLists.txt
BraidGroup/include/: BKLLeftNormalForm.h
BraidGroup/main/: fast_braids.cpp  ireland.cpp  test_deh_form.cpp  test_leftNF.cpp
BraidGroup/src/: BKLLeftNormalForm.cpp
CryptoAE/: CMakeLists.txt
Elt/: CMakeLists.txt
FiniteField/: CMakeLists.txt
FreeGroup/: CMakeLists.txt
Kayawood/: CMakeLists.txt
Matrix/: CMakeLists.txt
Polynomial/: CMakeLists.txt
Random/: CMakeLists.txt
Walnut/: CMakeLists.txt
cmake/: common.cmake
general/: CMakeLists.txt
general/include/: Permutation.h
